force-app/main/default/objects/Einvoice__c/Einvoice__c.object-meta.xml
<CustomObject>
    <label>Einvoice</label>
    <nameField>
        <label>Einvoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Einvoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>