force-app/main/default/objects/Einvoice__c/fields/AmountInWords__c.field-meta.xml
<CustomField>
    <fullName>AmountInWords__c</fullName>
    <label>AmountInWords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>