force-app/main/default/objects/Einvoice__c/fields/ArisingDate__c.field-meta.xml
<CustomField>
    <fullName>ArisingDate__c</fullName>
    <label>ArisingDate</label>
    <type>Date</type>
</CustomField>