force-app/main/default/objects/Einvoice__c/fields/BillWay__c.field-meta.xml
<CustomField>
    <fullName>BillWay__c</fullName>
    <label>BillWay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>