force-app/main/default/objects/Einvoice__c/fields/CONSIGNEECODE__c.field-meta.xml
<CustomField>
    <fullName>CONSIGNEECODE__c</fullName>
    <label>CONSIGNEECODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>