force-app/main/default/objects/Einvoice__c/fields/CusAddress__c.field-meta.xml
<CustomField>
    <fullName>CusAddress__c</fullName>
    <label>CusAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>