force-app/main/default/objects/Einvoice__c/fields/CusCode__c.field-meta.xml
<CustomField>
    <fullName>CusCode__c</fullName>
    <label>CusCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>