force-app/main/default/objects/Einvoice__c/fields/CusName__c.field-meta.xml
<CustomField>
    <fullName>CusName__c</fullName>
    <label>CusName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>