force-app/main/default/objects/Einvoice__c/fields/CusPhone__c.field-meta.xml
<CustomField>
    <fullName>CusPhone__c</fullName>
    <label>CusPhone</label>
    <type>Phone</type>
</CustomField>