force-app/main/default/objects/Einvoice__c/fields/CusTaxCode__c.field-meta.xml
<CustomField>
    <fullName>CusTaxCode__c</fullName>
    <label>CusTaxCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>