force-app/main/default/objects/Einvoice__c/fields/DEALERCODE__c.field-meta.xml
<CustomField>
    <fullName>DEALERCODE__c</fullName>
    <label>DEALERCODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>