force-app/main/default/objects/Einvoice__c/fields/DiaChiGiao__c.field-meta.xml
<CustomField>
    <fullName>DiaChiGiao__c</fullName>
    <label>DiaChiGiao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>