force-app/main/default/objects/Einvoice__c/fields/DonViDieuDong__c.field-meta.xml
<CustomField>
    <fullName>DonViDieuDong__c</fullName>
    <label>DonViDieuDong</label>
    <length>255</length>
    <type>Text</type>
</CustomField>