force-app/main/default/objects/Einvoice__c/fields/EmailKhachHang__c.field-meta.xml
<CustomField>
    <fullName>EmailKhachHang__c</fullName>
    <label>EmailKhachHang</label>
    <type>Email</type>
</CustomField>