force-app/main/default/objects/Einvoice__c/fields/Extra1__c.field-meta.xml
<CustomField>
    <fullName>Extra1__c</fullName>
    <label>Extra1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>