force-app/main/default/objects/Einvoice__c/fields/Extra1SP__c.field-meta.xml
<CustomField>
    <fullName>Extra1SP__c</fullName>
    <label>Extra1SP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>