force-app/main/default/objects/Einvoice__c/fields/Extra2__c.field-meta.xml
<CustomField>
    <fullName>Extra2__c</fullName>
    <label>Extra2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>