force-app/main/default/objects/Einvoice__c/fields/Extra2SP__c.field-meta.xml
<CustomField>
    <fullName>Extra2SP__c</fullName>
    <label>Extra2SP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>