force-app/main/default/objects/Einvoice__c/fields/Extra3__c.field-meta.xml
<CustomField>
    <fullName>Extra3__c</fullName>
    <label>Extra3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>