force-app/main/default/objects/Einvoice__c/fields/Extra_0__c.field-meta.xml
<CustomField>
    <fullName>Extra_0__c</fullName>
    <label>Extra 0</label>
    <length>255</length>
    <type>Text</type>
</CustomField>