force-app/main/default/objects/Einvoice__c/fields/Fkey__c.field-meta.xml
<CustomField>
    <fullName>Fkey__c</fullName>
    <label>Fkey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>