force-app/main/default/objects/Einvoice__c/fields/Invoice_Key_Value__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Key_Value__c</fullName>
    <label>Invoice Key Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>