force-app/main/default/objects/Einvoice__c/fields/Invoice_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Pattern__c</fullName>
    <label>Invoice Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>