force-app/main/default/objects/Einvoice__c/fields/Invoice_Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Publish_Date__c</fullName>
    <label>Invoice Publish Date</label>
    <type>Date</type>
</CustomField>