force-app/main/default/objects/Einvoice__c/fields/Invoice_Publish_Month__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Publish_Month__c</fullName>
    <label>Invoice Publish Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>