force-app/main/default/objects/Einvoice__c/fields/Invoice_Serial__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Serial__c</fullName>
    <label>Invoice Serial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>