force-app/main/default/objects/Einvoice__c/fields/LenhDieuDong__c.field-meta.xml
<CustomField>
    <fullName>LenhDieuDong__c</fullName>
    <label>LenhDieuDong</label>
    <length>255</length>
    <type>Text</type>
</CustomField>