force-app/main/default/objects/Einvoice__c/fields/NgayDieuDong__c.field-meta.xml
<CustomField>
    <fullName>NgayDieuDong__c</fullName>
    <label>NgayDieuDong</label>
    <length>255</length>
    <type>Text</type>
</CustomField>