force-app/main/default/objects/Einvoice__c/fields/NguoiVanChuyen__c.field-meta.xml
<CustomField>
    <fullName>NguoiVanChuyen__c</fullName>
    <label>NguoiVanChuyen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>