force-app/main/default/objects/Einvoice__c/fields/NguonDuLieu__c.field-meta.xml
<CustomField>
    <fullName>NguonDuLieu__c</fullName>
    <label>NguonDuLieu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>