force-app/main/default/objects/Einvoice__c/fields/NhapTaiKho__c.field-meta.xml
<CustomField>
    <fullName>NhapTaiKho__c</fullName>
    <label>NhapTaiKho</label>
    <length>255</length>
    <type>Text</type>
</CustomField>