force-app/main/default/objects/Einvoice__c/fields/Not_Include_VAT__c.field-meta.xml
<CustomField>
    <fullName>Not_Include_VAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Include VAT</label>
    <type>Checkbox</type>
</CustomField>