force-app/main/default/objects/Einvoice__c/fields/Order_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Record_Type_Name__c</fullName>
    <formula>Order__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Record Type Name</label>
    <type>Text</type>
</CustomField>