force-app/main/default/objects/Einvoice__c/fields/PhuongTienVC__c.field-meta.xml
<CustomField>
    <fullName>PhuongTienVC__c</fullName>
    <label>PhuongTienVC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>