force-app/main/default/objects/Einvoice__c/fields/PXNDDH__c.field-meta.xml
<CustomField>
    <fullName>PXNDDH__c</fullName>
    <label>PXNDDH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>