force-app/main/default/objects/Einvoice__c/fields/PYCGH__c.field-meta.xml
<CustomField>
    <fullName>PYCGH__c</fullName>
    <label>PYCGH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>