force-app/main/default/objects/Einvoice__c/fields/ResourCode__c.field-meta.xml
<CustomField>
    <fullName>ResourCode__c</fullName>
    <label>ResourCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>