force-app/main/default/objects/Einvoice__c/fields/SALEORDER__c.field-meta.xml
<CustomField>
    <fullName>SALEORDER__c</fullName>
    <label>SALEORDER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>