force-app/main/default/objects/Einvoice__c/fields/SoHopDong__c.field-meta.xml
<CustomField>
    <fullName>SoHopDong__c</fullName>
    <label>SoHopDong</label>
    <length>255</length>
    <type>Text</type>
</CustomField>