force-app/main/default/objects/Einvoice__c/fields/SOPHIEUTHU__c.field-meta.xml
<CustomField>
    <fullName>SOPHIEUTHU__c</fullName>
    <label>SOPHIEUTHU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>