force-app/main/default/objects/Einvoice__c/fields/SST__c.field-meta.xml
<CustomField>
    <fullName>SST__c</fullName>
    <label>SST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>