force-app/main/default/objects/Einvoice__c/fields/TenNguoiMua__c.field-meta.xml
<CustomField>
    <fullName>TenNguoiMua__c</fullName>
    <label>TenNguoiMua</label>
    <length>255</length>
    <type>Text</type>
</CustomField>