force-app/main/default/objects/Einvoice__c/fields/VATAmount__c.field-meta.xml
<CustomField>
    <fullName>VATAmount__c</fullName>
    <label>VATAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>