force-app/main/default/objects/Einvoice__c/fields/VATRate__c.field-meta.xml
<CustomField>
    <fullName>VATRate__c</fullName>
    <label>VATRate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>