force-app/main/default/objects/Einvoice__c/fields/VeViec__c.field-meta.xml
<CustomField>
    <fullName>VeViec__c</fullName>
    <label>VeViec</label>
    <length>255</length>
    <type>Text</type>
</CustomField>