force-app/main/default/objects/Einvoice__c/fields/XuatTaiKho__c.field-meta.xml
<CustomField>
    <fullName>XuatTaiKho__c</fullName>
    <label>XuatTaiKho</label>
    <length>255</length>
    <type>Text</type>
</CustomField>